Closed
Bug 737751
Opened 11 years ago
Closed 11 years ago
crash in nsMsgComposeAndSend::ProcessMultipartRelated
Categories
(MailNews Core :: Composition, defect)
Tracking
(thunderbird12+ fixed, thunderbird13+ fixed)
RESOLVED
FIXED
Thunderbird 14.0
People
(Reporter: wsmwk, Assigned: Bienvenu)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
829 bytes,
patch
|
standard8
:
review+
standard8
:
approval-comm-aurora+
standard8
:
approval-comm-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-19fec5ed-5218-4eee-8947-560ce2120316 . ============================================================= #10 crash for v11. no crashes prior to version 11. So assuming regression 0xul.dllnsMsgComposeAndSend::ProcessMultipartRelated mailnews/compose/src/nsMsgSend.cpp:1929 1xul.dllnsMsgComposeAndSend::HackAttachments mailnews/compose/src/nsMsgSend.cpp:2531 2xul.dllnsMsgComposeAndSend::Init mailnews/compose/src/nsMsgSend.cpp:3394 3xul.dllnsMsgComposeAndSend::CreateAndSendMessage mailnews/compose/src/nsMsgSend.cpp:4243 4xul.dllnsMsgCompose::_SendMsg mailnews/compose/src/nsMsgCompose.cpp:1076 5xul.dllnsMsgCompose::SendMsg mailnews/compose/src/nsMsgCompose.cpp:1270 6xul.dllNS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102 7xul.dllXPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:2216 8xul.dllXPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:1562 9mozjs.dlljs::InvokeKernel js/src/jsinterp.cpp:625
Comment 1•11 years ago
|
||
attachment.m_url seems to be null...
Assignee | ||
Comment 2•11 years ago
|
||
The most recent change in that area (making send scriptable) only changed the name of the member variable. I suspect this is similar to bug 714825. I'll see if I can find a fix for TB 12.
Assignee | ||
Comment 3•11 years ago
|
||
Figuring out hwo to reproduce this would be very helpful. I can certainly add null checks, but I don't know where else we'd crash.
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → dbienvenu
Updated•11 years ago
|
tracking-thunderbird13:
--- → +
Assignee | ||
Comment 4•11 years ago
|
||
Attachment #611952 -
Flags: review?(mbanner)
Comment 5•11 years ago
|
||
Comment on attachment 611952 [details] [diff] [review] null check fix [Triage Comment]
Attachment #611952 -
Flags: review?(mbanner)
Attachment #611952 -
Flags: review+
Attachment #611952 -
Flags: approval-comm-beta+
Attachment #611952 -
Flags: approval-comm-aurora+
Assignee | ||
Comment 6•11 years ago
|
||
http://hg.mozilla.org/comm-central/rev/e4d995aecc04 fixed on trunk.
Assignee | ||
Comment 7•11 years ago
|
||
marking fixed, though we don't know if a downstream crash will appear. We'll have to keep our eyes open for that.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 14.0
Comment 8•11 years ago
|
||
Checked into branches: http://hg.mozilla.org/releases/comm-aurora/rev/93adc53b2fa2 http://hg.mozilla.org/releases/comm-beta/rev/c09e188e7fe1
status-thunderbird12:
--- → fixed
status-thunderbird13:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•