null check fix for bug 737751, crash in nsMsgComposeAndSend::ProcessMultipartRelated, r=standard8